--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.cssJ">
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        <h1>hello
-        </h1>
-    </div>
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
