--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="header__left">
+                <img src="" alt="" class="logo">
+            </div>
+            <div class="header__left"><div class="d-flex">
+                <li><a href="#"></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </div>
+
+            </div>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
