--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="header__left">
-                <img src="" alt="" class="logo">
-            </div>
-            <div class="header__left"><div class="d-flex">
-                <li><a href="#"></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </div>
-
+    </header>
+    <main>
+        <div class="hero">
+            <div class="container">
+                <div class="hero__left">
+                    <h2></h2>
+                    <p></p>
+                    <a href="#"></a>
+                </div>
+                <div class="hero__right">
+                    <img src="" alt="">
+                </div>
             </div>
         </div>
-    </header>
-    <main></main>
+    </main>
     <footer></footer>
 </body>
 </html>
