--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
             </div>
 
             </div>
